--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "axios": "^1.6.8",
         "core-js": "^3.8.3",
         "element-ui": "^2.15.14",
+        "lodash": "^4.17.21",
         "vue": "^2.6.14",
         "vue-router": "^3.5.1"
     },
