--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "dependencies": {
         "axios": "^1.6.8",
         "core-js": "^3.8.3",
+        "echarts": "^5.5.0",
         "element-ui": "^2.15.14",
-        "lodash": "^4.17.21",
         "vue": "^2.6.14",
         "vue-router": "^3.5.1"
     },
